
    * Fixes
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix several corner cases with Many2Many over custom relationships
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)

    * Misc
        - Fix invalid variable names in ResultSource::View examples
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Protect tests and codebase from incomplete caller() overrides, like
          e.g. RT#32640
        - Work around rare test deadlock under heavy parallelism (RT#108390)
        - Stop using bare $] throughout - protects the codebase from issues
          similar (but likely not limited to) P5#72210

0.082820 2015-03-20 20:35 (UTC)
    * Fixes
        - Protect destructors from rare but possible double execution, and
          loudly warn the user whenever the problem is encountered (GH#63)
        - Relax the 'self_result_object' argument check in the relationship